--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,7 @@ header{
     width: 100%;
     height: 40vh;
     border: 1px solid black;
-    background-image: url('/assets/main.jpg');
+    background-image: url('assets/main.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
