--- a/estilos.css
+++ b/estilos.css
@@ -2,7 +2,6 @@ body{
     overflow-x: hidden;
 }
 
-
 header{
     width: 100%;
     height: 40vh;
@@ -34,4 +33,10 @@ header{
 
 .container-header > h2{
     font-size: 4rem;
+}
+
+
+.producto1, .producto2, .producto3{
+    background-color: rgb(221, 221, 221, 0.15);
+    font-family: 'Roboto', sans-serif;
 }
